# Tracking

./: README.md  pyproject.toml  setup.py
data/: generate_data.py
python/tracking/: utils.py  variables.py
