[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "Tracking"
version = "0.1.0"
description = "Toy model to show how tracking workings"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]